Fix navigation spacing for elastic layout. Wire up some links.

--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ header { height: 121px; padding: 15px 10px 0 25px; background: #454545 url('../i
 #join-give li:last-child a:hover { background-position: -127px -60px; }
 
 nav { height: 37px; padding: 0 50px; background-color: #2f2f2f; }
-nav li { display: block; float: left; width: 156px; height: 37px; line-height: 37px; text-align: center; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+nav li { display: block; float: left; width: 16%; height: 37px; line-height: 37px; text-align: center; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 nav li a, nav li a:visited { display: block; text-decoration: none; color: #fff; font-weight: bold; font-size: 15px; width: 100%; height: 100%; }
 nav li a.active { background-color: #504c4c; color: #bfb931; }
 nav li a:hover { color: #bfb931; }
